--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -98,32 +98,32 @@
               <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center collapsed" data-toggle="collapse" data-target="#mobileNavbarToggleUseCases" aria-haspopup="true" aria-expanded="false">Use cases</a>
               <div class="d-block">
                 <div id="mobileNavbarToggleUseCases" purpose="mobile-dropdown" class="collapse align-items-start" data-parent="#mobileDropdowns">
-                  <a class="mb-1" href="/platform">How it works</a>
+                  <a href="/platform">How it works</a>
                   <span>SUCCESS STORIES</span>
-                  <a class="pl-3 mb-1" href="https://blog.fleetdm.com/fleet-user-stories-e492a08cebfc">Wayfair</a>
-                  <a class="pl-3 mb-1" href="https://blog.fleetdm.com/fleet-user-stories-200c94ca8a10">Schrödinger</a>
-                  <a class="pl-3 mb-1" href="https://blog.fleetdm.com/fleet-user-stories-e5dc300b9e1c">F100 security & networking co.</a>
+                  <a class="pl-3" href="https://blog.fleetdm.com/fleet-user-stories-e492a08cebfc">Wayfair</a>
+                  <a class="pl-3" href="https://blog.fleetdm.com/fleet-user-stories-200c94ca8a10">Schrödinger</a>
+                  <a class="pl-3" href="https://blog.fleetdm.com/fleet-user-stories-e5dc300b9e1c">F100 security & networking co.</a>
                 </div>
               </div>
               <hr>
-              <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center mr-4 collapsed mb-0"  data-toggle="collapse" data-target="#mobileNavbarToggleDocumentation" aria-haspopup="true" aria-expanded="false">Documentation</a>
+              <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center mr-4 collapsed"  data-toggle="collapse" data-target="#mobileNavbarToggleDocumentation" aria-haspopup="true" aria-expanded="false">Documentation</a>
               <div class="d-block">
                 <div id="mobileNavbarToggleDocumentation" purpose="mobile-dropdown" class="collapse" data-parent="#mobileDropdowns">
-                  <a class="mb-1" href="/docs">Docs</a>
-                  <a class="mb-1" href="https://github.com/fleetdm/fleet/releases">Releases</a>
-                  <a class="mb-1" href="/queries">Query library</a>
+                  <a href="/docs">Docs</a>
+                  <a href="https://github.com/fleetdm/fleet/releases">Releases</a>
+                  <a href="/queries">Query library</a>
                   <span>GUIDES</span>
-                  <a class="pl-3 mb-1" href="https://blog.fleetdm.com/deploying-fleet-on-aws-with-terraform-a58a908e8d40">Deploy on AWS with Terraform</a>
-                  <a class="pl-3 mb-1" href="https://blog.fleetdm.com/deploying-fleet-on-render-2d743aed213f">Deploy on Render</a>
+                  <a class="pl-3" href="https://blog.fleetdm.com/deploying-fleet-on-aws-with-terraform-a58a908e8d40">Deploy on AWS with Terraform</a>
+                  <a class="pl-3" href="https://blog.fleetdm.com/deploying-fleet-on-render-2d743aed213f">Deploy on Render</a>
                 </div>
               </div>
               <hr>
-              <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center mr-4 collapsed mb-0" data-toggle="collapse" data-target="#mobileNavbarToggleCommunity">Community</a>
+              <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center mr-4 collapsed" data-toggle="collapse" data-target="#mobileNavbarToggleCommunity">Community</a>
               <div class="d-block">
                 <div id="mobileNavbarToggleCommunity" purpose="mobile-dropdown" class="collapse" data-parent="#mobileDropdowns">
-                  <a class="mb-1" href="/docs/contributing">Contribute</a>
-                  <a class="mb-1" href="/blog">Blog</a>
-                  <a class="mb-1" href="/logos">Logos & artwork</a>
+                  <a href="/docs/contributing">Contribute</a>
+                  <a href="/blog">Blog</a>
+                  <a href="/logos">Logos & artwork</a>
                 </div>
               </div>
               <hr>
@@ -132,7 +132,7 @@
             </div>
           </div>
           <%/* Desktop Navigation bar */%>
-          <div purpose="header-nav" class="header-link d-none d-lg-flex align-items-center">
+          <div purpose="header-nav" class="d-none d-lg-flex align-items-center">
             <div class="btn-group">
               <a class="dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Use cases</a>
               <div purpose="header-dropdown" class="dropdown-menu">
@@ -145,7 +145,7 @@
               </div>
             </div>
             <div class="btn-group">
-              <a class="header-link dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Documentation</a>
+              <a class="dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Documentation</a>
               <div purpose="header-dropdown" class="dropdown-menu">
                 <a class="dropdown-item mb-1" href="/docs">Docs</a>
                 <a class="dropdown-item mb-1" href="https://github.com/fleetdm/fleet/releases">Releases</a>
@@ -157,14 +157,14 @@
               </div>
             </div>
             <div class="btn-group">
-              <a class="header-link dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown">Community</a>
+              <a class="dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown">Community</a>
               <div purpose="header-dropdown" class="dropdown-menu">
                 <a class="dropdown-item mb-1" href="/docs/contributing">Contribute</a>
                 <a class="dropdown-item mb-1" href="/blog">Blog</a>
                 <a class="dropdown-item" href="/logos">Logos & artwork</a>
               </div>
             </div>
-            <a href="/pricing" class="header-link d-flex align-items-center py-2 px-3" style="text-decoration: none; line-height: 23px;">Pricing</a>
+            <a href="/pricing" class="d-flex align-items-center py-2 px-3" style="text-decoration: none; line-height: 23px;">Pricing</a>
             <span class="d-flex align-items-center px-3">
               <iframe src="//ghbtns.com/github-btn.html?user=fleetdm&amp;repo=fleet&amp;type=watch&amp;count=true"
               allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
