--- a/website/assets/styles/layout.less
+++ b/website/assets/styles/layout.less
@@ -43,18 +43,20 @@ html, body {
     a:not(.btn) {
       width: 100%;
       padding: 8px 24px 8px 0px;
+      margin-bottom: 4px;
       font-weight: 700;
       color: #212529;
       cursor: pointer;
     }
     hr {
-      margin-top: 8px;
+      margin-top: 4px;
       margin-bottom: 8px;
     }
 
     [purpose='mobile-dropdown-toggle'] {
       font-weight: 700;
       color: @core-fleet-black;
+      margin-bottom: 0px;
       &:not(.collapsed) {
         color: #6a67fe;
         margin-bottom: 4px;
