--- a/website/assets/styles/layout.less
+++ b/website/assets/styles/layout.less
@@ -17,20 +17,6 @@ html, body {
 }
 
 [purpose='page-header'] {
-  // Modified bootstrap classes
-  .collapsing {
-    opacity: 0;
-    transition: 0s;
-  }
-  .collapse.show {
-    opacity: 1;
-    pointer-events: auto;
-    z-index: 3;
-    overflow-y: scroll;
-  }
-  .collapse {
-    opacity: 0;
-  }
   // Mobile navigation menu
   [purpose='mobile-nav'] {
     position: fixed;
@@ -57,8 +43,9 @@ html, body {
       font-weight: 700;
       color: @core-fleet-black;
       margin-bottom: 0px;
-      &:not(.collapsed) {
+      &[aria-expanded='true'] {
         color: #6a67fe;
+        outline: none;
         margin-bottom: 4px;
       }
     }
@@ -87,7 +74,7 @@ html, body {
       }
     }
   }
-  // Header navigation link
+  // Header navigation links
   [purpose='header-nav'] {
     [aria-expanded='true'] {
       color: #6a67fe;
@@ -100,47 +87,16 @@ html, body {
     a:focus {
       outline-color: none;
     }
-    // Note: Using modified bootstrap dropdown classes
-    .dropdown-toggle::after {
-      display: none;
-    }
     [purpose='header-dropdown'] {
       box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.4);
       border-radius: 8px;
-      .dropdown-header {
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-top: 16px;
-        color: @core-fleet-black-25;
-        font-size: 11px;
-        line-height: 20px;
-        font-weight: bold;
-      }
-      .dropdown-divider {
-        margin: 4px 16px 0px 16px;
-      }
-      .dropdown-item {
-        font-size: 14px;
-        line-height: 20px;
-        padding: 8px 16px;
-        display: inline-flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .dropdown-item:hover {
-        background-color: unset;
-        color: #6a67fe;
-      }
-      .dropdown-item:before {
-        content: none;
-      }
       a {
         color: @core-fleet-black;
         font-weight: 400;
         line-height: 20px;
       }
       a:hover {
-        color: @core-fleet-black;
+        color: #6a67fe;
         text-decoration: none;
       }
     }
