fixed whitespace for settings input labels for tooltips

--- a/frontend/pages/admin/AppSettingsPage/_styles.scss
+++ b/frontend/pages/admin/AppSettingsPage/_styles.scss
@@ -58,4 +58,9 @@
       }
     }
   }
+
+  // so tooltips won't be triggered with whitespace
+  .form-field__label {
+    display: inline-block; 
+  }
 }
