Fix missing carat, changelog

--- a/frontend/pages/schedule/ManageSchedulePage/components/ScheduleEditorModal/_styles.scss
+++ b/frontend/pages/schedule/ManageSchedulePage/components/ScheduleEditorModal/_styles.scss
@@ -55,7 +55,7 @@
     }
   }
 
-  .upcarat {
+  .afterupcarat {
     &::after {
       content: url("../assets/images/icon-chevron-blue-16x16@2x.png");
       transform: scale(0.5) rotate(180deg);
