--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -261,7 +261,7 @@
         </div>
         <div purpose="tweet-card-bottom-row" class="card ">
           <div class="mb-4">
-            <a href="https://twitter.com/versia"><img width="90" height="38" alt="Versia logo" src="/images/social-proof-logo-versia-90x38@2x.png"/></a>
+            <a href="https://twitter.com/grupoversia"><img width="90" height="38" alt="Versia logo" src="/images/social-proof-logo-versia-90x38@2x.png"/></a>
           </div>
           <p class="pb-2 mb-1">Thanks <a href="https://twitter.com/fleetctl">@fleetctl</a> for such an awesome tool to manage <a href="https://twitter.com/osquery">@osquery</a></p>
           <div class="row px-3 pt-2">
