update second Versia link

--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -267,7 +267,7 @@
           <div class="row px-3 pt-2">
             <div>
               <p class="font-weight-bold m-0">Ruben Rodriguez</p>
-              <p class="m-0">Systems technician <a href="https://twitter.com/versia">@Versia</a></p>
+              <p class="m-0">Systems technician <a href="https://twitter.com/grupoversia">@Versia</a></p>
             </div>
           </div>
         </div>
