Fix whitespace label tooltips

--- a/frontend/pages/admin/UserManagementPage/components/UserForm/_styles.scss
+++ b/frontend/pages/admin/UserManagementPage/components/UserForm/_styles.scss
@@ -132,4 +132,9 @@
   &__tooltip-text {
     width: 300px;
   }
+
+  // so tooltips won't be triggered with whitespace
+  .form-field__label {
+    display: inline-block;
+  }
 }
