--- a/frontend/styles/global/_icons.scss
+++ b/frontend/styles/global/_icons.scss
@@ -60,7 +60,7 @@
   content: "\f00c";
 }
 
-.fleeticon-downcarat:before {
+.fleeticon-downcaret:before {
   content: "\f00d";
 }
 
@@ -80,7 +80,7 @@
   content: "\f019";
 }
 
-.fleeticon-upcarat:before {
+.fleeticon-upcaret:before {
   content: "\f01b";
 }
 
