add handbook link to top nav

--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -123,6 +123,7 @@
                 <div id="mobileNavbarToggleCommunity" purpose="mobile-dropdown" class="collapse" data-parent="#mobileDropdowns">
                   <a href="/docs/contributing">Contribute</a>
                   <a href="/blog">Blog</a>
+                  <a href="/handbook">Handbook</a>
                   <a href="/logos">Logos & artwork</a>
                 </div>
               </div>
@@ -161,6 +162,7 @@
               <div purpose="header-dropdown" class="dropdown-menu">
                 <a class="dropdown-item mb-1" href="/docs/contributing">Contribute</a>
                 <a class="dropdown-item mb-1" href="/blog">Blog</a>
+                <a class="dropdown-item mb-1" href="/handbook">Handbook</a>
                 <a class="dropdown-item" href="/logos">Logos & artwork</a>
               </div>
             </div>
