--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -51,7 +51,7 @@
           class="d-flex btn btn-primary btn-md justify-content-center mr-sm-3">
           Learn how to use Fleet
         </a>
-        <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank"
+        <a href="/slack" target="_blank"
           class="d-flex btn btn-md btn-outline-secondary btn-slack justify-content-center align-items-center mt-3 mt-sm-0">
           <img class="pr-3" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
           Ask for help on Slack
