--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -229,7 +229,7 @@
         <img class="mx-auto" style="width: 40px; height: 40px; margin-bottom: 16px;" alt="Slack logo" src="/images/logo-slack-24x24@2x.png">
         <h3>Join the community</h3>
         <p>Join the conversation or ask for help in our Slack channel.</p>
-        <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank" class="mt-auto">Join on Slack<img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
+        <a href="/slack" target="_blank" class="mt-auto">Join on Slack<img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
       </div>
     </div>
   </div>
