--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -151,7 +151,7 @@
         <a
           style="max-width: 220px"
           class="btn btn-block btn-md btn-primary mx-4"
-          href="/get-started"
+          href="/get-started" onClick="ga('send','event','[Fleetdm]','[Buttons]','[try it middle]');"
         >
           Try it out
         </a>
@@ -283,7 +283,7 @@
           <a
             style="max-width: 220px"
             class="btn btn-block btn-md btn-primary mx-4"
-            href="/get-started"
+            href="/get-started" onClick="ga('send','event','[Fleetdm]','[Buttons]','[try it bottom]');"
           >
             Try it out
           </a>
