Update website slack links to point to osquery.fleetdm.com (#4478)
* Add slack redirect

* update slack invite links to use redirect

--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -233,7 +233,7 @@
               <a href="https://www.youtube.com/channel/UCZyoqZ4exJvoibmTKJrQ-dQ">
                 <img alt="Youtube logo" src="/images/logo-youtube-57x40@2x.png" style="height: 20px; width: auto; margin-top:2px" class="pr-4" />
               </a>
-              <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/">
+              <a href="/slack">
                 <img alt="Slack logo" src="/images/logo-slack-24x24@2x.png" style="height: 20px; width: auto; margin-top:2px" class="pr-4" />
               </a>
               <a href="https://github.com/fleetdm/fleet">
