--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -36,6 +36,10 @@
       <p class="mb-0"><img alt="A small circle with an I inside of it"
           style="width: 16px; display: inline; margin-right: 8px; margin-bottom: 3px"
           src="/images/info-16x16@2x.png">Windows users can omit <code>sudo</code>, and should run the command in <code>Cmd</code>/<code>PowerShell</code> as administrators.</p>
+      <p class="mb-0"><img alt="A small circle with an I inside of it"
+          style="width: 16px; display: inline; margin-right: 8px; margin-bottom: 3px"
+      src="/images/info-16x16@2x.png">M1 Macs users need to have <a href="https://support.apple.com/en-us/HT211861" target="_blank">Rosetta</a> installed in order to
+      run fleet preview successfully.</p>
     </div>
     <div style="padding-top: 60px;">
       <h2 class="mb-3">3. Log in to Fleet</h2>
