--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -129,7 +129,7 @@
               </div>
               <hr>
               <a href="/pricing" class="d-flex align-items-center mb-2 pb-3" style="text-decoration: none; font-weight: 700;">Pricing</a>
-              <a style="padding: 4px 16px; line-height: 24px; width: 100px" class="btn btn-sm btn-primary align-items-center d-flex " href="/get-started" onClick="ga('send','event','[Fleetdm]','[Buttons]','[try it top]');">Try it out</a>
+              <a style="padding: 4px 16px; line-height: 24px; width: 100px" class="btn btn-sm btn-primary align-items-center d-flex " href="/get-started?tryitnow" >Try it out</a>
             </div>
           </div>
           <%/* Desktop Navigation bar */%>
@@ -171,7 +171,7 @@
               <iframe src="//ghbtns.com/github-btn.html?user=fleetdm&amp;repo=fleet&amp;type=watch&amp;count=true"
               allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe>
             </span>
-            <a style="padding: 4px 16px; line-height: 24px; color: #FFFFFF" class="btn btn-sm btn-primary align-items-center d-flex" href="/get-started" onClick="ga('send','event','[Fleetdm]','[Buttons]','[try it top]');">Try it out</a>
+            <a style="padding: 4px 16px; line-height: 24px; color: #FFFFFF" class="btn btn-sm btn-primary align-items-center d-flex" href="/get-started?tryitnow" >Try it out</a>
           </div>
         </div>
       </div>
