Icons on far right of form field

--- a/frontend/components/forms/admin/AppConfigForm/_styles.scss
+++ b/frontend/components/forms/admin/AppConfigForm/_styles.scss
@@ -50,9 +50,12 @@
   }
 
   .form-field {
+    width: 100%;
+
     &__label {
       font-weight: $bold;
       margin-bottom: $pad-xsmall;
+      width: 100%;
     }
 
     &__hint {
