Generate fleet installer with fleet desktop, add changelog

--- a/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
+++ b/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
@@ -28,13 +28,17 @@
   }
 
   &__info {
-    margin-top: $pad-small;
+    margin-top: $pad-medium;
   }
 
   &__cta {
     font-weight: $bold;
     padding-top: $pad-xsmall;
     margin: 0;
+  }
+
+  .fleet-checkbox {
+    display: flex;
   }
 
   .form-field {
