--- a/frontend/components/forms/admin/AppConfigForm/_styles.scss
+++ b/frontend/components/forms/admin/AppConfigForm/_styles.scss
@@ -68,7 +68,7 @@
     @include clearfix;
     margin: 0 0 $pad-xlarge;
 
-    .upcarat::after {
+    .upcaret::after {
       content: url("../assets/images/icon-collapse-black-16x16@2x.png");
       transform: scale(0.5);
       border-radius: 0px;
@@ -77,7 +77,7 @@
       margin: $pad-xsmall;
     }
 
-    .downcarat::after {
+    .downcaret::after {
       content: url("../assets/images/icon-chevron-black-16x16@2x.png");
       transform: scale(0.5);
       border-radius: 0px;
