--- a/website/views/pages/homepage.ejs
+++ b/website/views/pages/homepage.ejs
@@ -160,7 +160,7 @@
           class="btn btn-block btn-lg btn-white pl-0 m-0"
           purpose="animated-arrow-button"
           target="_blank"
-          href="https://calendly.com/fleetdm/demo?utm_source=live+qa"
+          href="https://calendly.com/fleetdm/demo?utm_source=homepage+demo+top"
           >Schedule a demo
         </a>
       </div>
