--- a/frontend/components/forms/fields/Slider/_styles.scss
+++ b/frontend/components/forms/fields/Slider/_styles.scss
@@ -1,6 +1,6 @@
 .fleet-slider {
   transition: background-color 150ms ease-in-out;
-  background-color: $core-fleet-black;
+  background-color: $ui-fleet-black-50;
   border-radius: 12px;
   border: 1px solid #eaeaea;
   cursor: pointer;
@@ -12,7 +12,7 @@
   box-shadow: inset 0 1px 6px 0 rgba(0, 0, 0, 0.2);
 
   &:hover {
-    background-color: $core-fleet-black;
+    background-color: $ui-fleet-black-50;
     box-shadow: inset 0 1px 6px 0 rgba(0, 0, 0, 0.2);
   }
 
@@ -45,17 +45,10 @@
   }
 
   &__label {
-    font-size: $small;
+    font-size: $x-small;
     font-weight: $regular;
     text-align: left;
     vertical-align: text-bottom;
-    margin-right: 10px;
-    color: $core-fleet-blue;
-
-    &--active {
-      color: $core-vibrant-blue;
-      margin-right: 0;
-      margin-left: 10px;
-    }
+    margin-left: $pad-small;
   }
 }
