--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -1,7 +1,7 @@
 <div id="get-started">
   <div style="max-width: 800px; padding-top: 80px; padding-bottom: 80px;" class="container-fluid px-3">
     <h1 class="pb-4 m-0">Get started</h1>
-    <p>Try out a preview of Fleet and osquery on your laptop before deploying at scale by following below.</p>
+    <p>Try out a preview of Fleet and osquery on your laptop before deploying at scale by following the guide below.</p>
     <p>You can also <a href="/docs/deploying">deploy to a server</a>.</p>
     <div class="pt-4 pb-4">
       <h2 class="mb-3">1. Install Node (optional) and Docker</h2>
@@ -58,7 +58,7 @@
         <a href="/slack" target="_blank"
           class="d-flex btn btn-md btn-outline-secondary btn-slack justify-content-center align-items-center mt-3 mt-sm-0">
           <img class="pr-3" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
-          Ask for help on Slack 
+          Ask for help on Slack
         </a>
       </div>
     </div>
