--- a/frontend/pages/policies/ManagePoliciesPage/components/PoliciesListWrapper/_styles.scss
+++ b/frontend/pages/policies/ManagePoliciesPage/components/PoliciesListWrapper/_styles.scss
@@ -24,13 +24,20 @@
       text-align: left;
       padding: $pad-medium $pad-large;
 
-      &:nth-child(2) {
-        width: calc(49% - 20px);
+      .name__header {
+        width: 50%;
       }
 
-      &:nth-child(3) {
-        width: 20%;
-        max-width: 150px;
+      .passing_host_count__header {
+        width: 140px;
+      }
+
+      .failing_host_count__header {
+        width: 140px;
+      }
+
+      .webhook__header {
+        width: 140px;
       }
 
       &:nth-last-child(2) {
