--- a/frontend/components/DeviceUserPage/_styles.scss
+++ b/frontend/components/DeviceUserPage/_styles.scss
@@ -1,3 +1,6 @@
+.app-wrap {
+  background-color: $ui-off-white;
+}
 .device-user {
   display: flex;
   flex-wrap: wrap;
@@ -312,6 +315,55 @@
     }
   }
 
+  &__error {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: $pad-xlarge 0;
+
+    #error-icon {
+      height: 12px;
+      width: 12px;
+      margin-right: 8px;
+    }
+
+    #new-tab-icon {
+      height: 12px;
+      width: 12px;
+      margin-left: 6px;
+    }
+
+    a {
+      font-size: $x-small;
+      color: $core-vibrant-blue;
+      font-weight: $bold;
+      text-decoration: none;
+    }
+
+    &__inner {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .info {
+      &__header {
+        display: block;
+        color: $core-fleet-black;
+        font-weight: $bold;
+        font-size: $x-small;
+        text-align: left;
+      }
+      &__data {
+        display: block;
+        color: $core-fleet-black;
+        font-weight: normal;
+        font-size: $x-small;
+        text-align: left;
+        margin-top: 10px;
+      }
+    }
+  }
+
   &__action-button-container {
     display: flex;
     align-items: center;
@@ -511,4 +563,106 @@
       font-size: $small !important;
     }
   }
+}
+
+.site-nav-item {
+  position: relative;
+  transition: color 200ms ease-in-out;
+  cursor: pointer;
+  max-height: 50px;
+
+  &:hover {
+    background-color: $core-fleet-black;
+  }
+
+  &--multiple.site-nav-item--active {
+    background-color: transparent;
+    border-right: 0;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+
+  &__icon {
+    position: relative;
+    font-size: $large;
+    margin-right: $pad-small;
+    width: 16px;
+    height: 16px;
+    vertical-align: sub;
+  }
+
+  &__name {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    vertical-align: middle;
+    font-weight: $regular;
+    font-size: $x-small;
+
+    // Bolding text when the button is active causes a layout shift
+    // so we add a hidden pseudo element with the same text string
+    &:before {
+      content: attr(data-text);
+      height: 0;
+      visibility: hidden;
+      overflow: hidden;
+      user-select: none;
+      pointer-events: none;
+      font-weight: $bold;
+    }
+  }
+
+  &__link {
+    color: $core-white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    padding: 14px 20px 17px;
+    text-decoration: none;
+  }
+
+  &__logo {
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    width: 64px;
+  }
+
+  &--active {
+    border-bottom: 3px solid $core-vibrant-blue;
+    background-color: $core-fleet-black;
+    height: 47px;
+
+    &:hover {
+      background-color: $core-fleet-black;
+    }
+
+    .site-nav-item__name {
+      font-weight: $bold;
+    }
+  }
+}
+
+.logo {
+  height: 48px;
+  transform: scale(0.5);
+  position: relative;
+  top: 1px;
+}
+
+.site-nav-container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
