--- a/website/views/pages/docs/basic-documentation.ejs
+++ b/website/views/pages/docs/basic-documentation.ejs
@@ -2,14 +2,14 @@
 
   <div purpose="docs-landing-page" v-if="isDocsLandingPage">
     <div style="max-width: 948px;" class="container-fluid p-0 px-3 px-sm-4 py-5 mb-5 mx-auto">
-  
+
       <div class="text-center">
         <h1 class="pt-5">Fleet documentation</h1>
         <p class="mb-2">Welcome to the documentation for Fleet, an open-source osquery management server.</p>
         <!-- <p class="mb-0"><strong>v4.0.1 </strong><a href="https://github.com/fleetdm/fleet/releases">changelog</a></p> -->
         <!-- TODO automatically display latest release version or come up with some other way to present this that doesn't rely on knowing the version number -->
       </div>
-  
+
       <div purpose="search" class="d-flex p-0 mt-5">
         <div class="input-group">
           <div class="input-group-prepend">
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-  
+
       <div purpose="cta-cards">
         <div class="container-fluid d-flex flex-column flex-sm-row justify-content-sm-between p-0 pt-4 mt-3">
           <div class="container-fluid d-flex flex-column flex-md-row justify-content-center align-items-center py-3 m-0 mr-sm-1 cta-card" @click="clickCTA('/install')">
@@ -34,7 +34,7 @@
               <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow" href="/install">
                 Get started
                 <img class="d-inline mb-1" style="height: 16px; width: auto;" alt="right arrow" src="/images/arrow-right-16x16@2x.png" />
-              </a>  
+              </a>
             </div>
           </div>
           <div class="container-fluid d-flex flex-column flex-md-row justify-content-center align-items-center py-3 m-0 ml-sm-1 mt-3 mt-sm-0 cta-card" @click="clickCTA('support')">
@@ -44,12 +44,12 @@
               <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow" href="/support">
                 Support
                 <img class="d-inline mb-1" style="height: 16px; width: auto;" alt="right arrow" src="/images/arrow-right-16x16@2x.png" />
-              </a>  
+              </a>
             </div>
           </div>
         </div>
       </div>
-  
+
       <div purpose="docs-tree">
         <div class="container-fluid d-flex flex-column flex-sm-row justify-content-sm-between p-0 px-4">
           <div v-for="page in findPagesByUrl()">
@@ -64,14 +64,14 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
   </div>
 
   <div v-else>
     <div purpose="docs-template" style="max-width: 1200px;" class="container-fluid px-lg-3  mb-5">
 
       <div purpose="breadcrumbs-and-search" class="conainer-fluid d-flex flex-column flex-lg-row justify-content-lg-between p-0 pt-4 pb-lg-2 m-0 breadcrumbs-search">
-        
+
         <div purpose="breadcrumbs" class="d-none d-lg-flex p-0 m-0 align-items-center breadcrumbs">
           <a :href="'/' + breadcrumbs[0]" class="pr-3" v-if="breadcrumbs.length > 1">
             {{breadcrumbs[0] === 'docs' ? 'Documentation' : breadcrumbs[0]}}
@@ -89,7 +89,7 @@
             </p>
           </div>
         </div>
-  
+
         <div purpose="search" class="d-flex p-0 mb-2 mb-lg-0">
           <div class="input-group">
             <div class="input-group-prepend">
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-  
+
         <div purpose="mobile-docs-nav" class="d-flex-block d-lg-none">
           <div class="d-flex flex-column d-lg-none p-0 m-0 justify-content-start align-items-center">
             <button purpose="docs-nav-button" class="btn btn-block d-flex align-items-center docs-nav-button" type="button" @click="toggleDocsNav">
@@ -113,7 +113,7 @@
               <span class="font-weight-bold px-2 m-0">{{thisPage.title}}</span>
               <img style="width: 6px; height: 9px;" class="ml-auto" alt="right chevron" src="/images/chevron-right-6x9@2x.png" v-if="!showDocsNav"/>
               <img style="width: 9px; height: 6px;" class="ml-auto" alt="down chevron" src="/images/chevron-down-9x6@2x.png" v-else/>
-            </button>  
+            </button>
           </div>
           <div class="border-bottom" v-if="!showDocsNav"></div>
           <div class="d-flex px-0 border-bottom mobile-docs-nav" v-if="showDocsNav">
@@ -133,12 +133,12 @@
                 </li>
               </ul>
             </div>
-          </div>  
-  
-        </div> 
-  
+          </div>
+
+        </div>
+
       </div>
-  
+
       <h1 purpose="page-title" class="d-flex d-lg-none py-4 m-0">{{thisPage.title}}</h1>
 
       <div purpose="edit-button-container">
@@ -146,7 +146,7 @@
           <a :href="'https://github.com/fleetdm/fleet/edit/main/docs/'+thisPage.sectionRelativeRepoPath"><i class="fa fa-pencil"></i>Edit page</a>
         </div>
       </div>
-  
+
       <div class="container-fluid d-flex flex-column flex-lg-row p-0 pt-lg-4 pb-lg-4 m-0">
         <div purpose="left-sidebar" style="min-width: 190px; max-width: 210px;" class="d-none d-lg-flex flex-column text-left pl-0 pr-4 left-sidebar">
           <ul class="p-0 pb-2 m-0 left-nav">
@@ -164,11 +164,11 @@
             </li>
           </ul>
           <a class="font-weight-bold py-3" target="_blank" href="https://github.com/fleetdm/fleet/releases">Releases</a>
-          <a href="/support" class="btn btn-block btn-sm btn-primary">Support</a>
+          <a href="/slack" class="btn btn-block btn-sm btn-primary">Support</a>
         </div>
-  
+
         <div purpose="right-sidebar" class="order-first order-lg-last p-0 pb-2 pb-lg-0 pr-lg-0 right-sidebar" v-if="!thisPage.title.includes('FAQ')">
-          
+
           <p class="font-weight-bold pb-2 m-0 mb-2" v-if="!_.isEmpty(subtopics)">On this page:</p>
           <div purpose="subtopics">
             <ul class="p-0 m-0">
@@ -183,14 +183,14 @@
               </li>
             </ul>
           </div>
-          
+
           <!-- <div v-if="!_.isEmpty(relatedTopics)">
             <h6 class="d-none d-lg-block font-weight-bold py-2">Related topics</h6>
             <ul class="d-none d-lg-block p-0">
               <li v-for="(relatedTopic, index) in relatedTopics" :key="index">{{relatedTopic}}</li>
             </ul>
           </div> -->
-  
+
         </div>
 
         <div purpose="content" id="body-content" class="d-flex flex-column px-lg-5 content" parasails-has-no-page-script>
@@ -198,11 +198,11 @@
 
           <%- partial(
             path.relative(
-              path.dirname(__filename), 
+              path.dirname(__filename),
               path.resolve(
-                sails.config.appPath, 
+                sails.config.appPath,
                 path.join(
-                  sails.config.builtStaticContent.compiledPagePartialsAppPath, 
+                  sails.config.builtStaticContent.compiledPagePartialsAppPath,
                   thisPage.htmlId
                 )
               )
@@ -229,11 +229,11 @@
           </div>
 
         </div>
-  
+
       </div>
-    
+
     </div>
-  
+
   </div>
 
 </div>
