feat: update docs landing page to link to slack instead of support form

--- a/website/views/pages/docs/basic-documentation.ejs
+++ b/website/views/pages/docs/basic-documentation.ejs
@@ -41,7 +41,7 @@
             <img class="cta-image" alt="Fleet support" src="/images/fleet-support-140x72@2x.png"/>
             <div class="text-center text-md-left cta-text">
               <p class="font-weight-bold p-0 pl-md-4 pt-2 pt-md-0 m-0">Can't find what you need?</p>
-              <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow" href="/support">
+              <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow" href="/slack">
                 Support
                 <img class="d-inline mb-1" style="height: 16px; width: auto;" alt="right arrow" src="/images/arrow-right-16x16@2x.png" />
               </a>
@@ -164,7 +164,7 @@
             </li>
           </ul>
           <a class="font-weight-bold py-3" target="_blank" href="https://github.com/fleetdm/fleet/releases">Releases</a>
-          <a href="/slack" class="btn btn-block btn-sm btn-primary">Support</a>
+          <a href="/support" class="btn btn-block btn-sm btn-primary">Support</a>
         </div>
 
         <div purpose="right-sidebar" class="order-first order-lg-last p-0 pb-2 pb-lg-0 pr-lg-0 right-sidebar" v-if="!thisPage.title.includes('FAQ')">
