Tab through activity feed, user menu

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -32,7 +32,8 @@
       &.single-row {
         cursor: pointer;
 
-        &:hover {
+        &:hover,
+        &:focus {
           background-color: rgba($core-vibrant-blue, 0.1);
         }
       }
@@ -320,11 +321,13 @@
       }
     }
 
-    button:hover {
+    button:hover,
+    button:focus {
       background-color: $ui-vibrant-blue-10;
     }
 
-    .button--disabled:hover {
+    .button--disabled:hover,
+    .button--disabled:focus {
       background-color: transparent;
     }
 
