--- a/frontend/components/Pagination/_style.scss
+++ b/frontend/components/Pagination/_style.scss
@@ -34,11 +34,13 @@
       }
     }
 
-    button:hover {
+    button:hover,
+    button:focus {
       background-color: $ui-vibrant-blue-10;
     }
 
-    .button--disabled:hover {
+    .button--disabled:hover,
+    .button--disabled:focus {
       background-color: transparent;
     }
 
