Add platform selector; refactor compatibility

--- a/frontend/components/buttons/Button/_styles.scss
+++ b/frontend/components/buttons/Button/_styles.scss
@@ -14,7 +14,7 @@ $base-class: "button";
       color: $active;
     }
   } @else {
-    &:hover {
+    &:hover:not(.button--disabled) {
       background-color: $hover;
     }
 
