--- a/frontend/pages/Homepage/cards/OperatingSystems/_styles.scss
+++ b/frontend/pages/Homepage/cards/OperatingSystems/_styles.scss
@@ -11,7 +11,7 @@
   .component__tabs-wrapper .table-container__header {
     display: none;
   }
-  &__empty-munki {
+  &__empty-os {
     margin: $pad-medium auto 0;
 
     h1 {
@@ -26,35 +26,16 @@
       font-size: $x-small;
       margin: 0;
     }
-
-    a {
-      color: $core-vibrant-blue;
-      font-size: $x-small;
-      font-weight: $bold;
-      text-decoration: none;
-    }
   }
   .data-table-container {
     .data-table__table {
       table-layout: fixed;
 
       thead {
-        .name__header {
-          width: 60%;
-        }
-        .version__header {
-          width: 30%;
-          padding-right: 0;
-        }
         .hosts_count__header {
           border-right: 0;
           padding-right: 0;
-          width: 60px;
-        }
-        .id__header {
-          padding: 0;
-          border-left: 0;
-          width: 40px;
+          width: 84px;
         }
       }
 
